--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta name="renderer" content="webkit" />
   <meta name="force-rendering" content="webkit"/>
   <link rel="shortcut icon" href="//www.jd.com/favicon.ico">
+  <link rel="manifest" href="/manifest.json">
   <script type="text/javascript">
     // 检测浏览器支持度，如不支持跳转提示用户升级浏览器
     if (!('defineProperty' in Object)) {
