feat(theme): add theme change feat

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="renderer" content="webkit" />
   <meta name="force-rendering" content="webkit"/>
-  <link rel="shortcut icon" href="//www.jd.com/favicon.ico">
+  <link rel="shortcut icon" href="https://www.jd.com/favicon.ico">
   <link rel="manifest" href="/manifest.json">
   <script type="text/javascript">
     // 检测浏览器支持度，如不支持跳转提示用户升级浏览器
